k8s/laravel-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel-service
  labels:
    app: bridgeops
    component: web
spec:
  ports:
    - port: 80          # Port exposed inside the cluster
      targetPort: 80    # Port inside the container (Nginx in supervisord)
      nodePort: 32080   # Port exposed on each Kubernetes node (accessible via http://<node-ip>:32080)
      protocol: TCP
      name: http
  selector:
    app: bridgeops
    component: web
  type: NodePort
